tests/negative/gold/export_cyclic2_test.gold
tests/negative/export_cyclic2_test.toit:6:8: error: Cyclic export dependency
export foo
       ^~~
tests/negative/export_cyclic2_a.toit:6:1: note: This clause contributes to the 'export' cycle
export *
^~~~~~
tests/negative/export_cyclic2_a.toit:6:1: error: Cyclic export dependency
export *
^~~~~~
tests/negative/export_cyclic2_test.toit:6:8: note: This clause contributes to the 'export' cycle
export foo
       ^~~
Compilation failed.
